<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/customPink">

    <!-- 1) Geri butonu -->
    <ImageButton
        android:id="@+id/back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:backgroundTint="@color/pinkLight"
        android:contentDescription="@string/desc_return"
        app:srcCompat="@drawable/baseline_arrow_back_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/view_caregiving_ticket"
        android:textColor="@color/pinkLight"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/back"/>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollViewCaregiving"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


            <Button
                android:id="@+id/btnCat2"
                style="@style/CategoryButton"
                android:backgroundTint="@color/pinkLight"
                android:text="@string/cat"
                app:strokeColor="@color/white"
                app:strokeWidth="3dp"/>

            <Button
                android:id="@+id/btnDog2"
                style="@style/CategoryButton"
                android:backgroundTint="@color/purpleLight"
                android:text="@string/dog"
                app:strokeColor="@color/white"
                app:strokeWidth="3dp"/>

            <Button
                android:id="@+id/btnRabbit2"
                style="@style/CategoryButton"
                android:backgroundTint="@color/purpleDark"
                android:text="@string/rabbit"
                app:strokeColor="@color/white"
                app:strokeWidth="3dp"/>

            <Button
                android:id="@+id/btnBird2"
                style="@style/CategoryButton"
                android:backgroundTint="@color/pinkLight"
                android:text="@string/bird"
                app:strokeColor="@color/white"
                app:strokeWidth="3dp"/>

            <Button
                android:id="@+id/btnHamster2"
                style="@style/CategoryButton"
                android:backgroundTint="@color/purpleLight"
                android:text="@string/hamster"
                app:strokeColor="@color/white"
                app:strokeWidth="3dp"/>

            <Button
                android:id="@+id/btnFish2"
                style="@style/CategoryButton"
                android:backgroundTint="@color/purpleDark"
                android:text="@string/fish"
                app:strokeColor="@color/white"
                app:strokeWidth="3dp"/>

            <Button
                android:id="@+id/btnTurtle2"
                style="@style/CategoryButton"
                android:backgroundTint="@color/pinkLight"
                android:text="@string/other"
                app:strokeColor="@color/white"
                app:strokeWidth="3dp"/>

            <Button
                android:id="@+id/btnOtherCare"
                style="@style/CategoryButton"
                android:backgroundTint="@color/purpleDark"
                android:text="@string/other"
                app:strokeColor="@color/white"
                app:strokeWidth="3dp"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
