<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/return6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/customPink">

    <ImageButton
        android:id="@+id/back"
        android:layout_width="71dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/pinkLight"
        android:contentDescription="@string/desc_return"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019"
        app:srcCompat="@drawable/baseline_arrow_back_24" />

    <Button
        android:id="@+id/createCaregivingTicket"
        android:layout_width="341dp"
        android:layout_height="245dp"
        android:backgroundTint="@color/pinkLight"
        android:text="@string/create_caregiving_ticket"
        android:textSize="24sp"
        android:textStyle="bold"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.252"
        app:strokeColor="@color/white"
        app:strokeWidth="3dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/viewCaregivingTicket"
        android:layout_width="341dp"
        android:layout_height="245dp"
        android:backgroundTint="@color/purpleLight"
        android:text="@string/view_caregiving_ticket"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.738"
        app:strokeColor="@color/white"
        app:strokeWidth="3dp"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>