<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/customPink">


    <ViewFlipper
        android:id="@+id/viewFlipper"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/back"
                android:layout_width="71dp"
                android:layout_height="49dp"
                android:backgroundTint="@color/pinkLight"
                android:contentDescription="@string/desc_return"
                app:srcCompat="@drawable/baseline_arrow_back_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintVertical_bias="0.02"/>

            <Button
                android:id="@+id/createAdoptionTicket"
                style="@style/Widget.Material3.Button"
                android:layout_width="341dp"
                android:layout_height="245dp"
                android:backgroundTint="@color/pinkLight"
                android:text="@string/create_adoption_ticket"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#FDFCFC"
                android:textSize="24sp"
                android:textStyle="bold"
                app:cornerRadius="8dp"
                app:strokeColor="@color/white"
                app:strokeWidth="3dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias="0.74"/>

            <Button
                android:id="@+id/viewAdoptionTicket"
                android:layout_width="340dp"
                android:layout_height="239dp"
                android:backgroundTint="@color/purpleLight"
                android:text="@string/view_adoption_ticket"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="24sp"
                android:textStyle="bold"
                app:cornerRadius="8dp"
                app:strokeColor="@color/white"
                app:strokeWidth="3dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias="0.29"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ViewFlipper>

</androidx.constraintlayout.widget.ConstraintLayout>
